error and error icon

--- a/toolkits/global/packages/global-forms/view/field.hbs
+++ b/toolkits/global/packages/global-forms/view/field.hbs
@@ -1,14 +1,21 @@
 <div class="c-form-field">
 	<label class="c-form-field-label">
 		{{label}}
-		{{#if hint}}
-			<small class="c-form-field-hint">{{hint}}</small>
-		{{/if}}
+		{{#unless error}}
+			{{#if hint}}
+				<small class="c-form-field-hint">{{hint}}</small>
+			{{/if}}
+		{{/unless}}
 	</label>
-	{{> (lookup . 'type')}}
 	{{#if error}}
 		<small class="c-form-field-error" id="error-{{id}}">
+			<span class="u-display-flex u-align-items-center">
+				<svg class="u-icon u-mr-4" width="22" height="22" aria-hidden="true" focusable="false">
+					<use xlink:href="{{parent.errorIconURL}}"></use>
+				</svg>
+			</span>
 			{{error}}
 		</small>
 	{{/if}}
+	{{> (lookup . 'type')}}
 </div>
