--- a/toolkits/global/packages/global-forms/view/inputCommonAttributes.hbs
+++ b/toolkits/global/packages/global-forms/view/inputCommonAttributes.hbs
@@ -1,4 +1,5 @@
-{{#if error}} aria-invalid="true"{{/if}}
+{{#if error}} invalid aria-invalid="true"{{/if}}
+{{#if required}} required aria-required="true"{{/if}}
 {{#if error}} aria-describedby="error-{{id}}"{{/if}}
 {{#if disabled}} disabled{{/if}}
 {{#if readonly}} readonly{{/if}}
