--- a/toolkits/global/packages/global-forms/view/fields/inputText.hbs
+++ b/toolkits/global/packages/global-forms/view/fields/inputText.hbs
@@ -1,4 +1,4 @@
-<input type="text"
+<input type="text" class="c-forms-input c-forms-input--text"
 	   {{> inputCommonAttributes}}
 />
 {{#if datalist.options}}
