--- a/toolkits/global/packages/global-forms/view/inputCommonAttributes.hbs
+++ b/toolkits/global/packages/global-forms/view/inputCommonAttributes.hbs
@@ -1,5 +1,6 @@
 {{#if id}} id="{{id}}"{{/if}}
 {{#if name}} name="{{name}}"{{/if}}
+{{#if value}} value="{{value}}"{{/if}}
 {{#if error}} invalid aria-invalid="true"{{/if}}
 {{#if error}} aria-describedby="error-{{id}}"{{/if}}
 {{#if required}} required aria-required="true"{{/if}}
