--- a/toolkits/global/packages/global-forms/view/inputCommonAttributes.hbs
+++ b/toolkits/global/packages/global-forms/view/inputCommonAttributes.hbs
@@ -7,6 +7,6 @@
 {{#if disabled}} disabled{{/if}}
 {{#if readonly}} readonly{{/if}}
 {{#if maxlength}} maxlength="{{maxlength}}"{{/if}}
-{{#unless autocomplete}} autocomplete="off"{{/if}}
+{{#unless autocomplete}} autocomplete="off"{{/unless}}
 {{#if autocomplete}} autocomplete="{{autocomplete}}"{{/if}}
 {{#if datalist.id}} list="{{datalist.id}}"{{/if}}
