--- a/toolkits/springer/packages/springer-hero/demo/index.hbs
+++ b/toolkits/springer/packages/springer-hero/demo/index.hbs
@@ -1,4 +1,8 @@
 <h2>Default</h2>
 {{>hero default}}
+<h2 class="u-mt-32">Default without <code>imgSrc</code></h2>
+{{>hero defaultNoImage}}
 <h2 class="u-mt-32">Custom background color</h2>
 {{>hero customColor}}
+<h2 class="u-mt-32">Custom background color with no <code>content</code></h2>
+{{>hero customColorNoContent}}
