--- a/toolkits/global/packages/global-forms/view/field.hbs
+++ b/toolkits/global/packages/global-forms/view/field.hbs
@@ -1,24 +1,24 @@
 {{#if legend}}
 	{{#if inputs}}
-		<fieldset class="c-form-field">
-			<legend class="c-form-field__label">{{legend}}</legend>
+		<fieldset class="c-forms-field">
+			<legend class="c-forms-field__label">{{legend}}</legend>
 			{{#each inputs}}
 				{{> (lookup .. 'type')}}
 			{{/each}}
 		</fieldset>
 	{{/if}}
 {{else}}
-	<div class="c-form-field">
-		<label class="c-form-field__label">
+	<div class="c-forms-field">
+		<label class="c-forms-field__label">
 			{{label}}
 			{{#unless error}}
 				{{#if hint}}
-					<small class="c-form-field__hint">{{hint}}</small>
+					<small class="c-forms-field__hint">{{hint}}</small>
 				{{/if}}
 			{{/unless}}
 		</label>
 		{{#if error}}
-			<small class="c-form-field__error" id="error-{{id}}">
+			<small class="c-forms-field__error" id="error-{{id}}">
 				<span class="u-display-flex u-align-items-center">
 					<svg class="u-icon u-mr-4" width="22" height="22" aria-hidden="true" focusable="false">
 						<use xlink:href="{{form.errorIconURL}}"></use>
