renaming and reorganization of partials

--- a/toolkits/global/packages/global-forms/view/fields/email.hbs
+++ b/toolkits/global/packages/global-forms/view/fields/email.hbs
@@ -1,3 +1,7 @@
+{{> label}}
+{{#if error}}
+	{{> error}}
+{{/if}}
 <input type="email" class="c-forms-input c-forms-input--email"
 	   {{> inputCommonAttributes}}
 />
