--- a/toolkits/global/packages/global-forms/view/fields/select.hbs
+++ b/toolkits/global/packages/global-forms/view/fields/select.hbs
@@ -1,3 +1,7 @@
+{{> label}}
+{{#if error}}
+	{{> error}}
+{{/if}}
 <div class="c-forms-input-container c-forms-input-container--select">
 	<select
 		class="c-forms-input c-forms-input--select"
