--- a/toolkits/global/packages/global-forms/view/fields/textarea.hbs
+++ b/toolkits/global/packages/global-forms/view/fields/textarea.hbs
@@ -1,3 +1,7 @@
+{{> label}}
+{{#if error}}
+	{{> error}}
+{{/if}}
 <textarea
 	class="c-forms-input c-forms-input--textarea"
 	{{> inputCommonAttributes}}
