--- a/toolkits/global/packages/global-forms/view/inputCommonAttributes.hbs
+++ b/toolkits/global/packages/global-forms/view/inputCommonAttributes.hbs
@@ -6,6 +6,7 @@
 {{#if required}} required aria-required="true"{{/if}}
 {{#if disabled}} disabled{{/if}}
 {{#if readonly}} readonly{{/if}}
+{{#if checked}} checked{{/if}}
 {{#if maxlength}} maxlength="{{maxlength}}"{{/if}}
 {{#unless autocomplete}} autocomplete="off"{{/unless}}
 {{#if autocomplete}} autocomplete="{{autocomplete}}"{{/if}}
