--- a/toolkits/global/packages/global-forms/view/fields/radio.hbs
+++ b/toolkits/global/packages/global-forms/view/fields/radio.hbs
@@ -1,4 +1,4 @@
-<label class="c-forms__field c-forms__field--label">
+<label class="c-forms__field c-forms__label c-forms__label--wrapper">
 	<input type="radio" {{> inputCommonAttributes}}>
 	<span class="c-forms__label c-forms__label--inline">{{label}}</span>
 </label>
