basic file upload

--- a/toolkits/global/packages/global-forms/view/inputCommonAttributes.hbs
+++ b/toolkits/global/packages/global-forms/view/inputCommonAttributes.hbs
@@ -11,3 +11,6 @@
 {{#unless autocomplete}} autocomplete="off"{{/unless}}
 {{#if autocomplete}} autocomplete="{{autocomplete}}"{{/if}}
 {{#if datalist.id}} list="{{datalist.id}}"{{/if}}
+{{#if accept}} accept="{{accept}}"{{/if}}
+{{#if multiple}} multiple{{/if}}
+{{#if capture}} capture="{{capture}}"{{/if}}
