legend allowing headings

--- a/toolkits/global/packages/global-forms/scss/10-settings/_default.scss
+++ b/toolkits/global/packages/global-forms/scss/10-settings/_default.scss
@@ -6,6 +6,7 @@ $global-form--background-color: #fff;
 $global-form--font-size: $context--font-size-base;
 $global-form--label-font-size: $context--font-size-base;
 $global-form--label-spacing: $tokens--sizing-200;
+$global-form--field-spacing: $tokens--sizing-400;
 $global-form--color-focus: #028ace; // TODO: create token for this
 $global-form--color-error: $tokens--state-error;
 $global-form--color-warning: $tokens--state-warning;
