--- a/toolkits/global/packages/global-forms/view/fieldset.hbs
+++ b/toolkits/global/packages/global-forms/view/fieldset.hbs
@@ -1,6 +1,6 @@
 <fieldset class="c-forms__fieldset"{{#unless legend}} role="presentation"{{/unless}}>
 	{{#if legend}}
-		<legend class="c-forms__legend">{{legend}}</legend>
+		<legend class="c-forms__legend">{{{legend}}}</legend>
 	{{/if}}
 	{{#each fields}}
 		<div class="c-forms__field">
