--- a/toolkits/global/packages/global-forms/view/fields/checkbox.hbs
+++ b/toolkits/global/packages/global-forms/view/fields/checkbox.hbs
@@ -2,6 +2,6 @@
 	{{> error}}
 {{/if}}
 <label class="c-forms__label c-forms__label--wrapper">
-	<input type="checkbox" {{> inputCommonAttributes}}>
+	<input class="c-forms__input c-forms__input--checkbox" type="checkbox" {{> inputCommonAttributes}}>
 	<span class="c-forms__label c-forms__label--inline">{{label}}</span>
 </label>
