--- a/toolkits/global/packages/global-forms/view/fields/email.hbs
+++ b/toolkits/global/packages/global-forms/view/fields/email.hbs
@@ -2,6 +2,6 @@
 {{#if error}}
 	{{> error}}
 {{/if}}
-<input type="email" class="c-forms-input c-forms-input--email"
+<input type="email" class="c-forms__input c-forms__input--email"
 	   {{> inputCommonAttributes}}
 />
