--- a/toolkits/global/packages/global-forms/view/fields/file.hbs
+++ b/toolkits/global/packages/global-forms/view/fields/file.hbs
@@ -2,6 +2,6 @@
 {{#if error}}
 	{{> error}}
 {{/if}}
-<input type="file" class="c-forms-input c-forms-input--file"
+<input type="file" class="c-forms__input c-forms__input--file"
 	   {{> inputCommonAttributes}}
 >
