--- a/toolkits/global/packages/global-forms/view/fields/select.hbs
+++ b/toolkits/global/packages/global-forms/view/fields/select.hbs
@@ -2,9 +2,9 @@
 {{#if error}}
 	{{> error}}
 {{/if}}
-<div class="c-forms-input-container c-forms-input-container--select">
+<div class="c-forms__input-container c-forms__input-container--select">
 	<select
-		class="c-forms-input c-forms-input--select"
+		class="c-forms__input c-forms__input--select"
 		{{> inputCommonAttributes}}
 	>
 		{{#each options}}
