--- a/toolkits/global/packages/global-forms/view/error.hbs
+++ b/toolkits/global/packages/global-forms/view/error.hbs
@@ -1,5 +1,5 @@
 <small class="c-forms__error" id="error-{{id}}">
-	<span class="u-display-flex u-align-items-center">
+	<span class="c-forms__icon c-forms__icon--error u-display-flex u-align-items-center">
 		<svg class="u-icon u-mr-4" width="22" height="22" aria-hidden="true" focusable="false">
 			<use xlink:href="{{form.errorIconURL}}"></use>
 		</svg>
