--- a/toolkits/global/packages/global-forms/view/fields/text.hbs
+++ b/toolkits/global/packages/global-forms/view/fields/text.hbs
@@ -2,7 +2,7 @@
 {{#if error}}
 	{{> error}}
 {{/if}}
-<input type="text" class="c-forms-input c-forms-input--text"
+<input type="text" class="c-forms__input c-forms__input--text"
 	   {{> inputCommonAttributes}}
 >
 {{#if datalist.options}}
