--- a/toolkits/global/packages/global-forms/view/fields/select.hbs
+++ b/toolkits/global/packages/global-forms/view/fields/select.hbs
@@ -16,4 +16,9 @@
 			</option>
 		{{/each}}
 	</select>
+	<span class="c-forms__icon c-forms__icon--error u-display-flex u-align-items-center">
+		<svg class="u-icon u-mr-4" width="22" height="22" aria-hidden="true" focusable="false">
+			<use xlink:href="{{form.selectIconURL}}"></use>
+		</svg>
+	</span>
 </div>
