updates generated aliases

--- a/context/brand-context/default/scss/00-tokens/_index.scss
+++ b/context/brand-context/default/scss/00-tokens/_index.scss
@@ -2,8 +2,11 @@
 @import '_border.variables.scss';
 @import '_breakpoints.variables.scss';
 @import '_button.variables.scss';
+@import '_icon.variables.scss';
 @import '_link.variables.scss';
 @import '_sizing.variables.scss';
 @import '_spacing.variables.scss';
 @import '_state.variables.scss';
 @import '_text.variables.scss';
+@import '_typography.variables.scss';
+@import '_ui.variables.scss';
