--- a/context/brand-context/default/scss/00-tokens/_background.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_background.variables.scss
@@ -1,9 +1,10 @@
 
 // Do not edit directly
-// Generated on Fri, 29 Apr 2022 12:04:04 GMT
+// Generated on Wed, 11 May 2022 11:34:19 GMT
 
 $tokens--background-page: #f8f8f8;
 $tokens--background-container: #ffffff;
+$tokens--background-container-inverted: #000000;
 $tokens--background-facet: #f3f3f3;
 $tokens--background-footer: #01324b;
 $tokens--background-table-heading: #666666;
