--- a/toolkits/global/packages/global-forms/view/fieldset.hbs
+++ b/toolkits/global/packages/global-forms/view/fieldset.hbs
@@ -4,7 +4,7 @@
 	{{/if}}
 	{{#each fields}}
 		<div class="c-forms__field">
-			{{> (lookup . 'type') form=../form}}
+			{{> (lookup . 'type')}}
 		</div>
 	{{/each}}
 </fieldset>
