global forms default styles

--- a/toolkits/global/packages/global-forms/scss/10-settings/_default.variables.scss
+++ b/toolkits/global/packages/global-forms/scss/10-settings/_default.variables.scss
@@ -1,4 +1,4 @@
-// Generated on 11/05/2022, 12:34:23
+// Generated on 11/05/2022, 17:22:33
 // Source: design-tokens/componenet/global/global-forms/default.json
 // DO NOT edit directly
 
@@ -11,6 +11,9 @@ $global-forms-field-stack-spacing: $spacing-100;
 $global-forms-heading-font-family: $typography-heading-level-1-default-font-size;
 $global-forms-heading-font-size: $font-size-900;
 $global-forms-heading-font-weight: $font-weight-light;
+$global-forms-indent-border-color: $border-color-indent;
+$global-forms-indent-border-radius: $border-radius-100;
+$global-forms-indent-border-width: $border-width-200;
 $global-forms-input-background-color: $background-container;
 $global-forms-input-border-color-error: $state-error;
 $global-forms-input-border-color-resting: $border-color-primary;
