--- a/toolkits/global/packages/global-forms/view/fields/checkbox.hbs
+++ b/toolkits/global/packages/global-forms/view/fields/checkbox.hbs
@@ -3,5 +3,8 @@
 {{/if}}
 <label class="c-forms__label c-forms__label--wrapper">
 	<input class="c-forms__input c-forms__input--checkbox" type="checkbox" {{> inputCommonAttributes}}>
-	<span class="c-forms__label c-forms__label--inline">{{label}}</span>
+	<span class="c-forms__label c-forms__label--inline c-forms__label--checkbox">{{label}}</span>
+	{{#if hint}}
+		<small class="c-forms__hint c-forms__hint--inline">{{hint}}</small>
+	{{/if}}
 </label>
