textareas (rows and columns)

--- a/toolkits/global/packages/global-forms/view/fields/textarea.hbs
+++ b/toolkits/global/packages/global-forms/view/fields/textarea.hbs
@@ -3,7 +3,7 @@
 	{{> error}}
 {{/if}}
 <textarea
-	class="c-forms-input c-forms-input--textarea"
+	class="c-forms__input c-forms__input--textarea"
 	{{> inputCommonAttributes}}
 >
 	{{value}}
