--- a/toolkits/global/packages/global-forms/view/inputCommonAttributes.hbs
+++ b/toolkits/global/packages/global-forms/view/inputCommonAttributes.hbs
@@ -14,3 +14,5 @@
 {{#if accept}} accept="{{accept}}"{{/if}}
 {{#if multiple}} multiple{{/if}}
 {{#if capture}} capture="{{capture}}"{{/if}}
+{{#if rows}} rows="{{rows}}"{{/if}}
+{{#if cols}} cols="{{cols}}"{{/if}}
