--- a/toolkits/global/packages/global-forms/scss/00-tokens/_default.tokens.scss
+++ b/toolkits/global/packages/global-forms/scss/00-tokens/_default.tokens.scss
@@ -1,39 +1,43 @@
-$global-forms-checkbox-checked-icon-path: "path/to/icon.svg";
-$global-forms-checkbox-size: $sizing-600;
-$global-forms-radio-carat-spacing: $spacing-200;
-$global-forms-radio-carat-size: $sizing-200;
-$global-forms-input-width-maximum: $ui-content-width;
-$global-forms-input-font-weight: $font-weight-regular;
-$global-forms-input-stack-spacing: $spacing-100;
-$global-forms-input-padding: $spacing-200 $spacing-400;
-$global-forms-message-font-weight: $font-weight-regular;
-$global-forms-label-font-weight: $font-weight-bold;
-$global-forms-legend-font-weight: $font-weight-regular;
-$global-forms-legend-font-size: $font-size-800;
-$global-forms-legend-font-family: $font-family-serif;
-$global-forms-heading-font-weight: $font-weight-light;
-$global-forms-heading-font-size: $font-size-900;
-$global-forms-field-stack-spacing: $spacing-100;
-$global-forms-select-icon-stroke: $icon-select-stroke;
-$global-forms-checkbox-checked-icon-fill: $icon-checkbox-checked-fill;
-$global-forms-checkbox-checked-icon-stroke: $icon-checkbox-checked-stroke;
-$global-forms-checkbox-checked-background-color: $background-container-inverted;
-$global-forms-indent-border-radius: $border-radius-100;
-$global-forms-indent-border-width: $border-width-200;
-$global-forms-indent-border-color: $border-color-indent;
-$global-forms-radio-carat-color: $text-primary;
-$global-forms-input-background-color: $background-container;
-$global-forms-input-font-color: $text-primary;
-$global-forms-input-font-size: $ui-font-size;
-$global-forms-input-focus-outline-color: $ui-focus-outline-color;
-$global-forms-input-border-width: $border-width-25;
-$global-forms-input-border-color-error: $state-error;
-$global-forms-input-border-color-resting: $border-color-primary;
-$global-forms-message-icon-color-error: $state-error;
-$global-forms-message-icon-color-resting: $text-primary;
-$global-forms-message-color-error: $state-error;
-$global-forms-message-color-resting: $text-primary;
-$global-forms-message-font-size: $ui-font-size;
-$global-forms-label-color: $text-primary;
-$global-forms-label-font-size: $ui-font-size;
-$global-forms-heading-font-family: $typography-heading-level-1-default-font-size;
+// Generated on 16/05/2022, 15:31:58
+// Source: design-tokens/componenets/global/global-forms/default.json
+// DO NOT edit directly
+
+$global-forms-checkbox-checked-background-color: $tokens--$background-container-inverted;
+$global-forms-checkbox-checked-icon-fill: $tokens--$icon-checkbox-checked-fill;
+$global-forms-checkbox-checked-icon-path: $tokens--"path/to/icon.svg";
+$global-forms-checkbox-checked-icon-stroke: $tokens--$icon-checkbox-checked-stroke;
+$global-forms-checkbox-size: $tokens--$sizing-600;
+$global-forms-field-stack-spacing: $tokens--$spacing-100;
+$global-forms-heading-font-family: $tokens--$typography-heading-level-1-default-font-size;
+$global-forms-heading-font-size: $tokens--$font-size-900;
+$global-forms-heading-font-weight: $tokens--$font-weight-light;
+$global-forms-indent-border-color: $tokens--$border-color-indent;
+$global-forms-indent-border-radius: $tokens--$border-radius-100;
+$global-forms-indent-border-width: $tokens--$border-width-200;
+$global-forms-input-background-color: $tokens--$background-container;
+$global-forms-input-border-color-error: $tokens--$state-error;
+$global-forms-input-border-color-resting: $tokens--$border-color-primary;
+$global-forms-input-border-width: $tokens--$border-width-25;
+$global-forms-input-focus-outline-color: $tokens--$ui-focus-outline-color;
+$global-forms-input-font-color: $tokens--$text-primary;
+$global-forms-input-font-size: $tokens--$ui-font-size;
+$global-forms-input-font-weight: $tokens--$font-weight-regular;
+$global-forms-input-padding: $tokens--$spacing-200 $spacing-400;
+$global-forms-input-stack-spacing: $tokens--$spacing-100;
+$global-forms-input-width-maximum: $tokens--$ui-content-width;
+$global-forms-label-color: $tokens--$text-primary;
+$global-forms-label-font-size: $tokens--$ui-font-size;
+$global-forms-label-font-weight: $tokens--$font-weight-bold;
+$global-forms-legend-font-family: $tokens--$font-family-serif;
+$global-forms-legend-font-size: $tokens--$font-size-800;
+$global-forms-legend-font-weight: $tokens--$font-weight-regular;
+$global-forms-message-color-error: $tokens--$state-error;
+$global-forms-message-color-resting: $tokens--$text-primary;
+$global-forms-message-font-size: $tokens--$ui-font-size;
+$global-forms-message-font-weight: $tokens--$font-weight-regular;
+$global-forms-message-icon-color-error: $tokens--$state-error;
+$global-forms-message-icon-color-resting: $tokens--$text-primary;
+$global-forms-radio-carat-color: $tokens--$text-primary;
+$global-forms-radio-carat-size: $tokens--$sizing-200;
+$global-forms-radio-carat-spacing: $tokens--$spacing-200;
+$global-forms-select-icon-stroke: $tokens--$icon-select-stroke;
