--- a/toolkits/global/packages/global-forms/scss/00-tokens/_springer.tokens.scss
+++ b/toolkits/global/packages/global-forms/scss/00-tokens/_springer.tokens.scss
@@ -1,1 +1,5 @@
-$global-forms-field-stack-spacing: $spacing-200;
+// Generated on 16/05/2022, 15:31:58
+// Source: design-tokens/componenets/springer/global-forms/springer.json
+// DO NOT edit directly
+
+$global-forms-field-stack-spacing: $tokens--$spacing-400;
