--- a/context/brand-context/default/scss/00-tokens/_border.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_border.variables.scss
@@ -1,14 +1,14 @@
 
 // Do not edit directly
-// Generated on Mon, 16 May 2022 14:53:33 GMT
+// Generated on Mon, 16 May 2022 15:40:55 GMT
 
 $tokens--border-color-primary: #000000;
 $tokens--border-color-input: #555555;
 $tokens--border-color-button: #025e8d;
 $tokens--border-color-indent: #dadada;
-$tokens--border-radius-50: .125rem;
-$tokens--border-radius-100: .25rem;
-$tokens--border-width-25: .0625;
-$tokens--border-width-50: .125rem;
-$tokens--border-width-100: .25rem;
-$tokens--border-width-200: .5rem;
+$tokens--border-radius-50: 2px;
+$tokens--border-radius-100: 4px;
+$tokens--border-width-25: 1px;
+$tokens--border-width-50: 2px;
+$tokens--border-width-100: 4px;
+$tokens--border-width-200: 8px;
