--- a/context/brand-context/default/scss/00-tokens/_sizing.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_sizing.variables.scss
@@ -1,14 +1,24 @@
 
 // Do not edit directly
-// Generated on Mon, 16 May 2022 14:53:32 GMT
+// Generated on Mon, 16 May 2022 15:40:55 GMT
 
-$tokens--sizing-0: 0; // no spacing, zero.
-$tokens--sizing-25: .0625; // .0625rem, 1px
-$tokens--sizing-50: .125rem; // .125rem, 2px
-$tokens--sizing-100: .25rem; // .25rem, 4px.
-$tokens--sizing-200: .5rem; // .5rem, 8px.
-$tokens--sizing-400: 1rem; // 1rem, 16px.
-$tokens--sizing-600: 1.5rem; // 1.5rem, 24px.
-$tokens--sizing-800: 2rem; // 2rem, 32px.
-$tokens--sizing-1200: 3rem; // 3rem, 48px.
-$tokens--sizing-1600: 4rem; // 4rem, 64px.
+$tokens--sizing-relative-0: 0; // no spacing, zero.
+$tokens--sizing-relative-25: .0625; // .0625rem, 1px
+$tokens--sizing-relative-50: .125rem; // .125rem, 2px
+$tokens--sizing-relative-100: .25rem; // .25rem, 4px.
+$tokens--sizing-relative-200: .5rem; // .5rem, 8px.
+$tokens--sizing-relative-400: 1rem; // 1rem, 16px.
+$tokens--sizing-relative-600: 1.5rem; // 1.5rem, 24px.
+$tokens--sizing-relative-800: 2rem; // 2rem, 32px.
+$tokens--sizing-relative-1200: 3rem; // 3rem, 48px.
+$tokens--sizing-relative-1600: 4rem; // 4rem, 64px.
+$tokens--sizing-absolute-0: 0; // no spacing, zero.
+$tokens--sizing-absolute-25: 1px; // .0625rem, 1px
+$tokens--sizing-absolute-50: 2px; // .125rem, 2px
+$tokens--sizing-absolute-100: 4px; // .25rem, 4px.
+$tokens--sizing-absolute-200: 8px; // .5rem, 8px.
+$tokens--sizing-absolute-400: 16px; // 1rem, 16px.
+$tokens--sizing-absolute-600: 24px; // 1.5rem, 24px.
+$tokens--sizing-absolute-800: 32px; // 2rem, 32px.
+$tokens--sizing-absolute-1200: 48px; // 3rem, 48px.
+$tokens--sizing-absolute-1600: 64px; // 4rem, 64px.
